--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -23,5 +23,9 @@ bitflags = "1.0"
 libc = "0.2"
 capstone="0.6.0"
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi", "minwindef", "std"] }
+
+
 [build-dependencies]
-build-helper = "0.1"
+cmake = "0.1"
